# laravel/app/Http/Controllers/ChatRoomController.php
@@ -2,9 +2,13 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\ChatRoom\StoreRequest;
+use App\Http\Requests\ChatRoom\UpdateRequest;
+use App\Models\ChatRoom;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use App\Services\ChatRoomService;
+use Illuminate\Support\Facades\DB;
 
 class ChatRoomController extends Controller
 {
@@ -15,6 +19,7 @@ class ChatRoomController extends Controller
 
   public function __construct(ChatRoomService $service)
   {
+    $this->authorizeResource(ChatRoom::class, 'id');
     $this->service = $service;
   }
 
@@ -36,47 +41,58 @@ class ChatRoomController extends Controller
   }
 
   /**
-   * Store a newly created resource in storage.
-   *
-   * @param \Illuminate\Http\Request $request
-   * @return \Illuminate\Http\Response
+   * @param StoreRequest $request
+   * @return \Illuminate\Contracts\Foundation\Application|\Illuminate\Contracts\Routing\ResponseFactory|\Illuminate\Http\Response
+   * @throws \Throwable
    */
-  public function store(Request $request)
+  public function store(StoreRequest $request)
   {
-    //
+    DB::beginTransaction();
+    try {
+      $chatRoom = $this->service->store($request->all());
+      DB::commit();
+    } catch (\Exception $e) {
+      DB::rollBack();
+      throw $e;
+    }
+    return response($chatRoom, 201);
   }
 
   /**
-   * Display the specified resource.
-   *
-   * @param int $id
+   * @param ChatRoom $id
    * @return \Illuminate\Http\Response
    */
-  public function show($id)
+  public function show(ChatRoom $id)
   {
-    //
+    return response($this->service->find($id), 200);
   }
 
   /**
-   * Update the specified resource in storage.
-   *
-   * @param \Illuminate\Http\Request $request
-   * @param int $id
+   * @param UpdateRequest $request
+   * @param ChatRoom $id
    * @return \Illuminate\Http\Response
    */
-  public function update(Request $request, $id)
+  public function update(UpdateRequest $request, ChatRoom $id)
   {
-    //
+    DB::beginTransaction();
+    try {
+      $chatRoom = $this->service->update($request->all(), $id);
+      DB::commit();
+    } catch (\Exception $e) {
+      DB::rollBack();
+      throw $e;
+    }
+    return response($chatRoom, 200);
   }
 
   /**
    * Remove the specified resource from storage.
    *
-   * @param int $id
+   * @param ChatRoom $id
    * @return \Illuminate\Http\Response
    */
-  public function destroy($id)
+  public function destroy(ChatRoom $id)
   {
-    //
+    return response($this->service->delete($id), 204);
   }
 }
